:white_check_mark: CustomDefenseRecordTest @SpringBootTest 제거