@@ -1,67 +1,33 @@
 package kr.co.morandi.backend.domain.contentrecord.customdefense;
 
 import kr.co.morandi.backend.domain.contentproblemrecord.ContentProblemRecord;
-import kr.co.morandi.backend.domain.contentproblemrecord.customdefense.CustomDefenseProblemRecord;
-import kr.co.morandi.backend.domain.contentproblemrecord.customdefense.CustomDefenseProblemRecordRepository;
 import kr.co.morandi.backend.domain.contenttype.customdefense.CustomDefense;
 import kr.co.morandi.backend.domain.contenttype.customdefense.CustomDefenseProblems;
-import kr.co.morandi.backend.domain.contenttype.customdefense.CustomDefenseProblemsRepository;
-import kr.co.morandi.backend.domain.contenttype.customdefense.CustomDefenseRepository;
 import kr.co.morandi.backend.domain.member.Member;
-import kr.co.morandi.backend.domain.member.MemberRepository;
 import kr.co.morandi.backend.domain.problem.Problem;
-import kr.co.morandi.backend.domain.problem.ProblemRepository;
-import org.assertj.core.api.Assertions;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static kr.co.morandi.backend.domain.contenttype.customdefense.DefenseTier.GOLD;
 import static kr.co.morandi.backend.domain.contenttype.customdefense.Visibility.OPEN;
-import static kr.co.morandi.backend.domain.contenttype.tier.ProblemTier.*;
+import static kr.co.morandi.backend.domain.contenttype.tier.ProblemTier.B5;
+import static kr.co.morandi.backend.domain.contenttype.tier.ProblemTier.S5;
 import static kr.co.morandi.backend.domain.member.SocialType.GOOGLE;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
 
-@SpringBootTest
 @ActiveProfiles("test")
 class CustomDefenseRecordTest {
-
-    @Autowired
-    private ProblemRepository problemRepository;
-
-    @Autowired
-    private CustomDefenseRepository customDefenseRepository;
-
-    @Autowired
-    private MemberRepository memberRepository;
-
-    @Autowired
-    private CustomDefenseProblemsRepository customDefenseProblemsRepository;
-
-    @Autowired
-    private CustomDefenseRecordRepository customDefenseRecordRepository;
-    @AfterEach
-    void tearDown() {
-        customDefenseRecordRepository.deleteAllInBatch();
-        customDefenseProblemsRepository.deleteAllInBatch();
-        customDefenseRepository.deleteAllInBatch();
-        problemRepository.deleteAllInBatch();
-        memberRepository.deleteAllInBatch();
-    }
     @DisplayName("커스텀 디펜스 모드 기록이 만들어 졌을 때 시험 날짜는 시작한 시점과 같아야 한다.")
     @Test
     public void testDateIsEqualNow() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
+
         Member member = Member.create("user", "user@gmail.com", GOOGLE, "user", "user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -76,7 +42,8 @@ class CustomDefenseRecordTest {
     public void solvedCountIsZero() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
+
         Member member = Member.create("user", "user@gmail.com", GOOGLE, "user", "user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -92,7 +59,8 @@ class CustomDefenseRecordTest {
     public void problemCountIsEqual() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
+
         Member member = Member.create("user", "user@gmail.com", GOOGLE, "user", "user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -107,7 +75,8 @@ class CustomDefenseRecordTest {
     public void totalSolvedTimeIsZero() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
+
         Member member = Member.create("user", "user@gmail.com", GOOGLE, "user", "user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -122,7 +91,8 @@ class CustomDefenseRecordTest {
     void isSolvedFalse() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
+
         Member member = createMember("user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -133,7 +103,10 @@ class CustomDefenseRecordTest {
         // then
         assertThat(customDefenseProblemRecords)
                 .extracting("isSolved")
-                .containsExactlyInAnyOrder(false, false);
+                .containsExactlyInAnyOrder(
+                        false,
+                                false
+                );
     }
 
     @DisplayName("커스텀 디펜스 모드 기록이 만들어졌을 때 세부 문제 기록의 문제 기록의 소요 시간은 0분이어야 한다.")
@@ -141,7 +114,7 @@ class CustomDefenseRecordTest {
     void solvedTimeIsZero() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
         Member member = createMember("user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -152,7 +125,10 @@ class CustomDefenseRecordTest {
         // then
         assertThat(customDefenseProblemRecords)
                 .extracting("solvedTime")
-                .containsExactlyInAnyOrder(0L, 0L);
+                .containsExactlyInAnyOrder(
+                        0L,
+                                0L
+                );
     }
 
     @DisplayName("커스텀 디펜스 모드 기록이 만들어졌을 때 세부 문제 기록의 제출 횟수는 0회 이어야 한다.")
@@ -160,7 +136,7 @@ class CustomDefenseRecordTest {
     void submitCountIsZero() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
         Member member = createMember("user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -171,7 +147,10 @@ class CustomDefenseRecordTest {
         // when & then
         assertThat(customDefenseProblemRecords)
                 .extracting("submitCount")
-                .containsExactlyInAnyOrder(0L, 0L);
+                .containsExactlyInAnyOrder(
+                        0L,
+                                0L
+                );
     }
 
     @DisplayName("커스텀 디펜스 모드 기록이 만들어졌을 때 세부 문제 기록의 문제 정답 코드는 null 값 이어야 한다.")
@@ -179,7 +158,7 @@ class CustomDefenseRecordTest {
     void solvedCodeIsNull() {
         // given
         CustomDefense customDefense = createCustomDefense();
-        List<Problem> problems = createCustomProblems(customDefense);
+        List<Problem> problems = getCustomDefenseProblems(customDefense);
         Member member = createMember("user");
         LocalDateTime startTime = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
@@ -190,7 +169,11 @@ class CustomDefenseRecordTest {
         // when & then
         assertThat(customDefenseProblemRecords)
                 .extracting("solvedCode")
-                .containsExactlyInAnyOrder(null, null);
+                .containsExactlyInAnyOrder(
+                        null,
+                                null
+                );
+
     }
 
     private CustomDefense createCustomDefense() {
@@ -198,24 +181,20 @@ class CustomDefenseRecordTest {
         Problem problem1 = Problem.create(1L, B5, 0L);
         Problem problem2 = Problem.create(2L, S5, 0L);
         List<Problem> problems = List.of(problem1, problem2);
-        problemRepository.saveAll(problems);
 
         LocalDateTime now = LocalDateTime.of(2024, 2, 26, 0, 0, 0, 0);
 
-        CustomDefense customDefense = CustomDefense.create(problems, member, "custom_defense",
+        return CustomDefense.create(problems, member, "custom_defense",
                 "custom_defense", OPEN, GOLD, 60L, now);
-
-        customDefenseRepository.save(customDefense);
-
-        return customDefense;
     }
-    private List<Problem> createCustomProblems(CustomDefense customDefense) {
+    private List<Problem> getCustomDefenseProblems(CustomDefense customDefense) {
         List<CustomDefenseProblems> customDefenseProblems = customDefense.getCustomDefenseProblems();
-        List<Problem> problems = customDefenseProblems.stream().map(CustomDefenseProblems::getProblem).collect(Collectors.toList());
-        return problems;
+
+        return customDefenseProblems.stream()
+                .map(CustomDefenseProblems::getProblem)
+                .toList();
     }
     private Member createMember(String name) {
-        Member member = Member.create(name, name + "@gmail.com", GOOGLE, name, name);
-        return memberRepository.save(member);
+        return Member.create(name, name + "@gmail.com", GOOGLE, name, name);
     }
 }
